# bedrock-ecs

./: .gitignore  Cargo.toml  execution.html  output.asm  schedule.html
crates/core/: Cargo.toml
crates/core/benches/: iter.rs
crates/core/src/: lib.rs  local.rs  time.rs  util.rs  world.rs
crates/core/src/archetype/: graph.rs  mod.rs  registry.rs  signature.rs
crates/core/src/command/: buffer.rs  command.rs  entity.rs
crates/core/src/component/: component.rs  registry.rs
crates/core/src/entity/: entity.rs  handle.rs  mod.rs  registry.rs
crates/core/src/message/: inbox.rs  mailbox.rs  mod.rs  params.rs
crates/core/src/plugins/: mod.rs  query.rs  registry.rs  system.rs
crates/core/src/query/: bundle.rs  filter.rs  group.rs  has.rs  iter.rs  iterator.rs  mod.rs  par_iter.rs  query.rs
crates/core/src/query/parallel/: archetypal.rs  iter.rs  mod.rs  table.rs
crates/core/src/resource/: registry.rs  resource.rs
crates/core/src/scheduler/: graph.rs  mod.rs  schedule.rs  scheduler.rs
crates/core/src/sparse/: set.rs
crates/core/src/system/: args.rs  mod.rs  param.rs  system.rs
crates/core/src/table/: change.rs  column.rs  iter.rs  iterator.rs  mod.rs  table.rs
crates/core/tests/: large_test.rs  par_test.rs  small_test.rs  tests.rs
crates/core/wit/: api.wit
crates/derive/: Cargo.toml
crates/derive/src/: lib.rs
crates/ecs/: Cargo.toml
crates/ecs/benches/: signature.rs
crates/ecs/src/: archetype.rs  bitset.rs  command.rs  component.rs  entity.rs  filter.rs  graph.rs  lib.rs  local.rs  param.rs  query.rs  resource.rs  schedule.rs  scheduler.rs  signature.rs  sparse.rs  sparse_set.rs  spawn.rs  state.rs  system.rs  table.rs  table_iterator.rs  test.rs  time.rs  util.rs  world.rs
crates/ecs/src/archetype/: mod.rs  registry.rs  signature.rs
crates/ecs/src/command/: buffer.rs  command.rs  entity.rs  mod.rs
crates/ecs/src/component/: component.rs  mod.rs  spawn.rs
crates/ecs/src/entity/: entity.rs  handle.rs  registry.rs
crates/ecs/src/event/: event.rs  mod.rs  params.rs
crates/ecs/src/message/: mod.rs  params.rs
crates/ecs/src/query/: bundle.rs  filter.rs  has.rs  iterator.rs  mod.rs  query.rs
crates/ecs/src/resource/: mod.rs  registry.rs  resource.rs
crates/ecs/src/scheduler/: graph.rs  schedule.rs
crates/ecs/src/system/: mod.rs  param.rs  system.rs
crates/ecs/src/table/: change.rs  column.rs  iterator.rs  mod.rs  table.rs
crates/ecs/tests/: tests.rs
crates/ecs_derive/: Cargo.toml
crates/ecs_derive/src/: lib.rs
crates/reflect/: Cargo.toml
crates/reflect/src/: lib.rs
crates/test-plugin/: Cargo.toml
crates/test-plugin/src/: lib.rs  local.rs
crates/test-plugin/wit/: plugin.wit
