[package]
name = "bedrock_ecs"
version = "0.1.0"
edition = "2024"

[features]
tracing = []
generics = []
default = ["generics"]

[[bench]]
name = "signature"
harness = false

[dependencies]
bedrock_ecs_derive = { path = "../derive" }
smallvec = "1.13.2"
paste = "1.0.15"
rayon = "1.11.0"
generic-array = "1.3.5"
tracing = { version = "0.1.44", features = []}
rustc-hash = "2.1.1"
thread_local = "1.1.9"
nonmax = "0.5.5"

[dev-dependencies]
criterion = "0.8.2"
tracing-subscriber = "0.3.23"
