[package]
name = "bedrock_ecs"
version = "0.1.0"
edition = "2024"

[features]
tracing = []
generics = []
inspect = []
plugins = ["dep:wasmtime", "dep:wit-bindgen"]
default = ["generics", "tracing", "inspect", "plugins"]

[[bench]]
name = "signature"
harness = false

[dependencies]
bedrock_ecs_derive = { path = "../derive" }
smallvec = "1.13.2"
paste = "1.0.15"
rayon = "1.11.0"
generic-array = "1.3.5"
tracing = { version = "0.1.44", features = ["release_max_level_info"]}
rustc-hash = "2.1.1"
thread_local = "1.1.9"
nonmax = "0.5.5"
open = "5.3.3"

wasmtime = { version = "43.0.0", optional = true, default-features = false, features = ["runtime", "cranelift", "parallel-compilation", "demangle"] }
wit-bindgen = { version = "0.54.0", optional = true }
wasmtime-wasi = "43.0.0"
bytes = "1.11.1"
nohash-hasher = "0.2.0"

[dev-dependencies]
criterion = "0.8.2"
rand = "0.10.0"
tracing-subscriber = "0.3.23"
