[package]
name = "ecs"
version = "0.1.0"
edition = "2024"

[features]
instrument = []
generics = []
default = ["generics", "instrument"]

[dependencies]
bitvec = "1.0.1"

ecs_derive = { path = "../ecs_derive" }
smallvec = "1.13.2"
paste = "1.0.15"
rayon = "1.11.0"
generic-array = "1.3.5"
tracing = "0.1.44"

[dev-dependencies]
tracing-subscriber = "0.3.23"
