[package]
name = "ecs"
version = "0.1.0"
edition = "2024"

[features]
tracing = []
generics = []
default = ["generics"]

[[bench]]
name = "signature"
harness = false

[dependencies]
ecs_derive = { path = "../ecs_derive" }
smallvec = "1.13.2"
paste = "1.0.15"
rayon = "1.11.0"
generic-array = "1.3.5"
tracing = { version = "0.1.44", features = ["max_level_off"]}
rustc-hash = "2.1.1"
thread_local = "1.1.9"
scopeguard = "1.2.0"

[dev-dependencies]
criterion = "0.8.2"
tracing-subscriber = "0.3.23"
